force-app/main/default/objects/Speaker__c/Speaker__c.object-meta.xml
<CustomObject>
    <label>Speaking Engagement</label>
    <nameField>
        <displayFormat>SPR-{0000}</displayFormat>
        <label>Speaking Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaking Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>