force-app/main/default/objects/Speaker__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>DATETIMEVALUE( Lecture__r.Lecture_Start__c  )</formula>
    <label>Date</label>
    <type>Date</type>
</CustomField>