force-app/main/default/objects/Speaker__c/fields/Eligible_for_Invited_Submission__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Invited_Submission__c</fullName>
    <formula>AND(ISPICKVAL(Lecture__r.Submission_Type__c, &quot;Invited&quot;)  
,
OR(
ISPICKVAL(Lecture__r.Session__r.Session_Type__c, &quot;Symposia&quot;),
ISPICKVAL(Lecture__r.Session__r.Session_Type__c, &quot;Focused Workshop&quot;),
ISPICKVAL(Lecture__r.Session__r.Session_Type__c, &quot;Plenary Sysmposium&quot;),
ISPICKVAL(Lecture__r.Session__r.Session_Type__c, &quot;Special Session&quot;)
))</formula>
    <label>Eligible for Invited Submission</label>
    <type>Checkbox</type>
</CustomField>