force-app/main/default/objects/Speaker__c/fields/Eligible_for_Speaker_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Speaker_Ticket__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Speaker Ticket</label>
    <type>Checkbox</type>
</CustomField>