force-app/main/default/objects/Speaker__c/fields/Lecture__c.field-meta.xml
<CustomField>
    <fullName>Lecture__c</fullName>
    <label>Lecture</label>
    <referenceTo>Lecture__c</referenceTo>
    <relationshipName>Speakers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>