force-app/main/default/objects/Speaker__c/fields/Lecture_Title__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Title__c</fullName>
    <formula>Lecture__r.Lecture_Title__c</formula>
    <label>Lecture Title</label>
    <type>Text</type>
</CustomField>