force-app/main/default/objects/Speaker__c/fields/Presenter__c.field-meta.xml
<CustomField>
    <fullName>Presenter__c</fullName>
    <label>Presenter</label>
    <referenceTo>Presenter__c</referenceTo>
    <relationshipLabel>Speaking Engagements</relationshipLabel>
    <relationshipName>Speaking_Engagements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>