force-app/main/default/objects/Speaker__c/fields/Session_Number__c.field-meta.xml
<CustomField>
    <fullName>Session_Number__c</fullName>
    <formula>Lecture__r.Session__r.Name</formula>
    <label>Session Number</label>
    <type>Text</type>
</CustomField>