force-app/main/default/objects/Speaker__c/fields/Session_Title__c.field-meta.xml
<CustomField>
    <fullName>Session_Title__c</fullName>
    <formula>Lecture__r.Session__r.Session_Title__c</formula>
    <label>Session Title</label>
    <type>Text</type>
</CustomField>