force-app/main/default/objects/Speaker__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <formula>TEXT(Lecture__r.Session__r.Session_Type__c)</formula>
    <label>Session Type</label>
    <type>Text</type>
</CustomField>