force-app/main/default/objects/Speaker__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>invited</fullName>
                <default>true</default>
                <label>invited</label>
            </value>
            <value>
                <fullName>confirmed</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>