force-app/main/default/objects/Speaker__c/listViews/My_Presentations.listView-meta.xml
<ListView>
    <fullName>My_Presentations</fullName>
    <columns>NAME</columns>
    <columns>Presenter__c</columns>
    <columns>Lecture__c</columns>
    <columns>Eligible_for_Invited_Submission__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Eligible_for_Invited_Submission__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Presentations</label>
</ListView>